--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               two most widely used vaccines against Covid-19 (the disease caused
               by the virus). 
             </p>
-            <h3>Immune response</h3>
+            <h3>MHC1 cell receptors and the immune response</h3>
             <ol>
               <li>
                 Special receptors (MHC1s) are present on the surface of every
