further edit to image ref

--- a/index.html
+++ b/index.html
@@ -376,14 +376,13 @@
             <li id="note3">
               <p>
                 For notes on reverse transcription (in the context of HIV
-                &mdash; Human Immunodeficiency Virus), see
+                &mdash; Human Immunodeficiency Virus), see my
                 <a
                   href="https://chrisnajman.github.io/hiv/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >HIV</a
-                >
-                , by the same author.
+                >.
                 <a href="#ref3" class="ref">Back to text &#8593;</a>
               </p>
             </li>
