References added in text and footer

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <p>
                 LNPs (lipid nanoparticles) do not bind to cell
                 receptors but rather mimic the appearance of membrane-friendly
-                molecules which allows them easy access to the cell.
+                molecules which allows them easy access to the cell <a href="#note4"><sup id="ref4">[4]</sup></a>.
               </p>
 
               <p>
@@ -320,18 +320,15 @@
 
 
           <section>
-            <h2>The Role of Adjuvants</h2>
+            <h2>The Role of Adjuvants in Vaccines</h2>
             <p>
-              Although adjuvants are not diagrammed on this page, they are important.
-            </p>
-            <p>
-              Adjuvants are substances in the vaccines which stimulate
+              Adjuvants (not shown in the diagrams) <a href="#note5"><sup id="ref5">[5]</sup></a> are substances in the vaccines which stimulate
               cell-mediated immune responses.
             </p>
             <p>
               Adjuvants require something of a balancing act: they need to
               induce a strong immune response which will attract the attention of cells 
-              from the adaptive immune system. However, 
+              from the innate immune system. However, 
               the response must not be so strong that 
               the cell is destroyed (or self-destructs) before the
               protein fragment on the MHC1 receptor is stored and analysed by the adaptive immune
@@ -384,6 +381,30 @@
                   >HIV</a
                 >.
                 <a href="#ref3" class="ref">Back to text &#8593;</a>
+              </p>
+            </li>
+            <li id="note4">
+              <p>
+                For more detail see
+                <a
+                  href="https://pubs.acs.org/doi/10.1021/acsnano.1c04996#_i22"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >LNPs in the COVID-19 mRNA Vaccines</a
+                >.
+                <a href="#ref4" class="ref">Back to text &#8593;</a>
+              </p>
+            </li>
+            <li id="note5">
+              <p>
+                For a detailed discussion, see 
+                <a
+                  href="https://www.nature.com/articles/nm.3409"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Key roles of adjuvants in modern vaccines</a
+                >.
+                <a href="#ref5" class="ref">Back to text &#8593;</a>
               </p>
             </li>
           </ol>
