--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- requires google site verification -->
+    <meta name="google-site-verification" content="eVQkpMj5Dk1ZjdpCpDPCEInMwNYu-_eqED5fxfsFjzE" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="SARS-CoV-2, Astrazeneca/Oxford and Pfizer/BioNTech pathways." />
