--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="eVQkpMj5Dk1ZjdpCpDPCEInMwNYu-_eqED5fxfsFjzE" />
+    <meta
+      name="google-site-verification"
+      content="eVQkpMj5Dk1ZjdpCpDPCEInMwNYu-_eqED5fxfsFjzE"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="SARS-CoV-2, Astrazeneca/Oxford and Pfizer/BioNTech pathways." />
+    <meta
+      name="description"
+      content="SARS-CoV-2 and Oxford-Astrazeneca / Pfizer/BioNTech vaccine pathways."
+    />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -14,7 +20,6 @@
     <meta name="theme-color" content="#ffffff" />
     <title>SARS-CoV-2 and Covid-19 Vaccines</title>
     <link rel="stylesheet" href="css/style.css" />
-   
   </head>
 
   <body>
@@ -29,7 +34,7 @@
                   <source srcset="img/logo.webp" type="image/webp" />
                   <img
                     src="img/logo.png"
-                    alt="SARS-CoV-2 flanked by the Astrazeneca and Pfizer/BioNTech vaccines"
+                    alt="SARS-CoV-2 flanked by the Oxford-Astrazeneca and Pfizer/BioNTech vaccines"
                   />
                 </picture>
               </div>
@@ -39,7 +44,7 @@
             <p>
               This page outlines the pathways of the SARS-CoV-2 virus and of the
               two most widely used vaccines against Covid-19 (the disease caused
-              by the virus). 
+              by the virus).
             </p>
             <h3>MHC1 cell receptors and the immune response</h3>
             <ol>
@@ -147,19 +152,19 @@
               Currently, the two most widely accepted vaccines for international
               travel
               <a href="#note2"><sup id="ref2">[2]</sup></a> are those produced
-              by AstraZeneca/Oxford and Pfizer/BioNTech. It will be seen from
+              by Oxford-Astrazeneca and Pfizer/BioNTech. It will be seen from
               the diagrams that the methods of translation, assembly and budding
               of the S proteins are the same for both vaccines. The major
               difference between them is that the Pfizer/BioNTech carries RNA
-              and the Astrazeneca vaccine carries DNA. The Astrazenaca DNA must
-              be injected into the nucleus and converted (transcribed) to mRNA
-              before proteins can be translated, whereas the RNA carried by
-              Pfizer/BioNTech can start translation as soon as it escapes from
-              the endosome.
+              and the Oxford-Astrazeneca vaccine carries DNA. The Astrazenaca
+              DNA must be injected into the nucleus and converted (transcribed)
+              to mRNA before proteins can be translated, whereas the RNA carried
+              by Pfizer/BioNTech can start translation as soon as it escapes
+              from the endosome.
             </p>
 
             <section>
-              <h3>AstraZeneca/Oxford Vaccine</h3>
+              <h3>Oxford-Astrazeneca Vaccine</h3>
               <div class="vaccine-type">
                 <picture>
                   <source
@@ -168,7 +173,7 @@
                   />
                   <img
                     src="img/vaccine-astrazeneca-oxford.png"
-                    alt="Astrazeneca engineered adenovirus vaccine"
+                    alt="Oxford-Astrazeneca engineered adenovirus vaccine"
                     loading="lazy"
                   />
                 </picture>
@@ -202,12 +207,17 @@
                 All adenoviruses carry DNA as the genomic material. The viral
                 RNA from SARS-CoV-2 is first extracted and then reverse
                 transcribed <a href="#note3"><sup id="ref3">[3]</sup></a> back
-                into DNA. This DNA then replaces the adenovirus DNA, after, as previously mentioned,
-                all genes save those that encode for the S protein have been removed.</p>
-<h4>Viral DNA and the host cell nucleus</h4>
-                <p>It is important to emphasise that although the DNA will eventually be inserted into a host cell's nucleus <strong>it will not integrate with the host cell's DNA</strong>.</p>
+                into DNA. This DNA then replaces the adenovirus DNA, after, as
+                previously mentioned, all genes save those that encode for the S
+                protein have been removed.
+              </p>
+              <h4>Viral DNA and the host cell nucleus</h4>
+              <p>
+                It is important to emphasise that although the DNA will
+                eventually be inserted into a host cell's nucleus
+                <strong>it will not integrate with the host cell's DNA</strong>.
+              </p>
 
-              </ol>
               <div class="image-info">
                 <div class="image-info-image">
                   <picture>
@@ -240,11 +250,9 @@
                       nucleus.
                     </li>
                     <li>Viral DNA is transcribed into messenger RNA (mRNA).</li>
+                    <li>Translation of S (spike) protein by ribosomes.</li>
                     <li>
-                      Translation of S (spike) protein by ribosomes.
-                    </li>
-                    <li>
-                      Fragments of viral S displays on the host cell MHC1
+                      Fragments of S protein display on the host cell MHC1
                       receptors.
                     </li>
                     <li>Endosomic containment of S protein.</li>
@@ -270,9 +278,11 @@
                 </picture>
               </div>
               <p>
-                LNPs (lipid nanoparticles) do not bind to cell
-                receptors but rather mimic the appearance of membrane-friendly
-                molecules which allows them easy access to the cell <a href="#note4"><sup id="ref4">[4]</sup></a>.
+                LNPs (lipid nanoparticles) do not bind to cell receptors but
+                rather mimic the appearance of membrane-friendly molecules which
+                allows them access to the cell via endocytosis.
+                <a href="#note4"><sup id="ref4">[4]</sup></a
+                >.
               </p>
 
               <p>
@@ -302,11 +312,9 @@
                       and lipid bilayer dissolve, releasing the positive sense
                       RNA.
                     </li>
+                    <li>Translation of S (spike) protein by ribosomes.</li>
                     <li>
-                      Translation of S (spike) protein by ribosomes.
-                    </li>
-                    <li>
-                      Fragments of viral S displays on the host cell MHC1
+                      Fragments of S protein display on the host cell MHC1
                       receptors.
                     </li>
                     <li>Endosomic containment of S protein.</li>
@@ -318,42 +326,38 @@
             </section>
           </section>
 
-
           <section>
             <h2>The Role of Adjuvants in Vaccines</h2>
             <p>
-              Adjuvants (not shown in the diagrams) <a href="#note5"><sup id="ref5">[5]</sup></a> are substances in the vaccines which stimulate
-              cell-mediated immune responses.
+              Adjuvants (not shown in the diagrams)
+              <a href="#note5"><sup id="ref5">[5]</sup></a> are substances in
+              the vaccines which stimulate cell-mediated immune responses.
             </p>
             <p>
               Adjuvants require something of a balancing act: they need to
-              induce a strong immune response which will attract the attention of cells 
-              from the innate immune system. However, 
-              the response must not be so strong that 
-              the cell is destroyed (or self-destructs) before the
-              protein fragment on the MHC1 receptor is stored and analysed by the adaptive immune
-              system.
+              induce a strong immune response which will attract the attention
+              of cells from the innate immune system. However, the response must
+              not be so strong that the cell is destroyed (or self-destructs)
+              before the protein fragment on the MHC1 receptor is stored and
+              analysed by the adaptive immune system.
             </p>
-  
           </section>
         </article>
       </main>
 
       <footer class="page-footer">
-
         <section>
           <h2>References</h2>
           <ol>
             <li id="note1">
               <p>
-                For more details on how viruses are classified, see
+                For more details on how viruses are classified, see my
                 <a
                   href="https://chrisnajman.github.io/baltimore-classification/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Baltimore Classification of Viruses</a
-                >
-                ,by the same author.
+                >.
                 <a href="#ref1" class="ref">Back to text &#8593;</a>
               </p>
             </li>
@@ -397,7 +401,7 @@
             </li>
             <li id="note5">
               <p>
-                For a detailed discussion, see 
+                For a detailed discussion, see
                 <a
                   href="https://www.nature.com/articles/nm.3409"
                   target="_blank"
@@ -414,7 +418,8 @@
           <ul>
             <li>
               All images created with
-              <a class="url-text"
+              <a
+                class="url-text"
                 href="https://app.biorender.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -423,10 +428,10 @@
               >.
             </li>
             <li>
-              All pathways adapted from "COVID-19 Vaccine
-              Candidate: AZD1222 (University of Oxford & AstraZeneca)".
-              Retrieved from
-              <a class="url-text"
+              All pathways adapted from "COVID-19 Vaccine Candidate: AZD1222
+              (University of Oxford & AstraZeneca)". Retrieved from
+              <a
+                class="url-text"
                 href="https://app.biorender.com/biorender-templates"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -436,7 +441,8 @@
             </li>
             <li>
               PNG to WEBP conversion:
-              <a class="url-text"
+              <a
+                class="url-text"
                 href="https://onlineconvertfree.com/complete/png-webp/"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -446,7 +452,6 @@
             </li>
           </ul>
         </section>
-        
       </footer>
     </div>
   </body>
