--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                 All infectious genes are stripped from the DNA during the
                 production process with the result that it cannot be used to
                 replicate neither adenoviruses (as there are no longer any genes
-                that can encode this in the DNA) nor SARS-CoV-2 proteins
+                that can encode them in the DNA) nor SARS-CoV-2 proteins
                 (excepting the S protein, the only protein the genes in the DNA
-                can encode for).
+                can encode).
               </p>
               <h4>Why a chimpanzee adenovirus?</h4>
               <p>
@@ -208,7 +208,7 @@
                 RNA from SARS-CoV-2 is first extracted and then reverse
                 transcribed <a href="#note3"><sup id="ref3">[3]</sup></a> back
                 into DNA. This DNA then replaces the adenovirus DNA, after, as
-                previously mentioned, all genes save those that encode for the S
+                previously mentioned, all genes save those that encode the S
                 protein have been removed.
               </p>
               <h4>Viral DNA and the host cell nucleus</h4>
@@ -446,7 +446,6 @@
                 href="https://onlineconvertfree.com/complete/png-webp/"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="word-break"
                 >https://onlineconvertfree.com/complete/png-webp/</a
               >.
             </li>
