Added immune response text and images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="SARS-CoV-2 and Oxford-Astrazeneca / Pfizer/BioNTech vaccine pathways."
+      content="A description of SARS-CoV-2 and Oxford-Astrazeneca / Pfizer/BioNTech vaccine pathways, as well as immune responses, both to the vaccine itself and to post-vaccination viral invasion."
     />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -44,9 +44,10 @@
             <p>
               This page outlines the pathways of the SARS-CoV-2 virus and of the
               two most widely used vaccines against Covid-19 (the disease caused
-              by the virus).
+              by the virus). It also includes immune responses, both to the
+              vaccine itself and to post-vaccination viral invasion.
             </p>
-            <h3>MHC1 cell receptors and the immune response</h3>
+            <h3>A Note on MHC1 cell receptors and the immune response</h3>
             <ol>
               <li>
                 Special receptors (MHC1s) are present on the surface of every
@@ -57,10 +58,11 @@
                 or otherwise, will be displayed on these MHC1 receptors.
               </li>
               <li>
-                These fragments will be presented to cells of the immune system.
+                In their turn, these fragments will be presented to cells of the
+                immune system.
               </li>
               <li>
-                The immune system will memorise the characteristics of the
+                The immune system will then memorise the characteristics of the
                 protein, and attempt to neutralise or destroy the pathogen
                 wherever and whenever it is encountered.
               </li>
@@ -92,7 +94,7 @@
               The viral RNA and the spike (S) protein which will be translated
               from it are the most important ingredients of the vaccines.
             </p>
-            <h3>SARS-CoV-2 Pathway</h3>
+            <h3 id="sarscov2pathway">SARS-CoV-2 Pathway</h3>
             <div class="image-info">
               <div class="image-info-image">
                 <picture>
@@ -241,7 +243,7 @@
                     </li>
                     <li>
                       The endosome carries the adenovirus into the cytosol. The
-                      fibers detach and the endosome dissolves, releasing the
+                      fibres detach and the endosome dissolves, releasing the
                       capsid.
                     </li>
                     <li>The capsid is transported to the nucleus.</li>
@@ -325,7 +327,254 @@
               </div>
             </section>
           </section>
+          <section>
+            <h2>Immune responses</h2>
+            <p>
+              In this section I first cover the immune response to the vaccine
+              itself and then the immune response to a system that has received
+              the vaccine.
+            </p>
+            <p>
+              Note: what follows is a <em>simplified</em> account of the
+              workings of the immune system.
+            </p>
+            <section>
+              <h3>Immune response to a vaccine</h3>
+              <p>
+                The purpose of any vaccine is to stimulate an immune response
+                which will be remembered by the immune system and which will
+                fight off any later infection.
+              </p>
+              <div class="image-info image-info-reverse no-border">
+                <div class="image-info-image">
+                  <picture>
+                    <source
+                      srcset="
+                        img/immune-responses/a-vaccine-immune-response.webp
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      src="img/immune-responses/a-vaccine-immune-response.png"
+                      alt="A"
+                      loading="lazy"
+                    />
+                  </picture>
+                </div>
 
+                <div class="image-info-info">
+                  <div>
+                    <h4>A</h4>
+                    <p>
+                      S proteins have exited the cell. In the extracellular
+                      space there floats a cytotoxic T-cell and a B-cell, both
+                      part of the adaptive immune system. Also present is a
+                      macrophage, an antigen presenting cell belonging to the
+                      innate immune system. Macrophages patrol the extracellular
+                      space looking for potential pathogens. A helper T-cell,
+                      responsible for coordinating the activities of the
+                      adaptive immune system is nearby.
+                    </p>
+                    <ol class="counter-list">
+                      <li>
+                        A macrophage digests the S protein and exposes a
+                        fragment on its receptor.
+                      </li>
+                      <li>
+                        A helper T-cell binds its receptor to the macrophage
+                        receptor holding the S protein fragment.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+              <div class="image-info no-border">
+                <div class="image-info-image">
+                  <picture>
+                    <source
+                      srcset="
+                        img/immune-responses/b-vaccine-immune-response.webp
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      src="img/immune-responses/b-vaccine-immune-response.png"
+                      alt="B"
+                      loading="lazy"
+                    />
+                  </picture>
+                </div>
+                <div class="image-info-info">
+                  <div>
+                    <h4>B</h4>
+                    <p>
+                      The helper T-cell is activated on binding with the
+                      macrophage.
+                    </p>
+                    <ol class="counter-list">
+                      <li>
+                        Helper T-cell activation results in the secretion of a
+                        flood of cytokines (chemical messengers) which target
+                        the helper T-cell itself. The cytokines also target and
+                        stimulate
+                      </li>
+                      <li>
+                        the cytotoxic T-cell to bind to the host cell MHC1
+                        receptor, and
+                      </li>
+                      <li>the B-cell receptor to attach to the S protein.</li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+              <div class="image-info image-info-reverse">
+                <div class="image-info-image">
+                  <picture>
+                    <source
+                      srcset="
+                        img/immune-responses/c-vaccine-immune-response.webp
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      src="img/immune-responses/c-vaccine-immune-response.png"
+                      alt="A"
+                      loading="lazy"
+                    />
+                  </picture>
+                </div>
+                <div class="image-info-info">
+                  <div>
+                    <h4>C</h4>
+                    <p>
+                      Note: memory cells (T and B) are cells of the adaptive
+                      immune system which stay in the system, ready to intercept
+                      a specific antigen.
+                    </p>
+                    <ol class="counter-list">
+                      <li>
+                        Clonal proliferation of Helper T-cells and Helper memory
+                        T-cells.
+                      </li>
+                      <li>
+                        Clonal proliferation and activation of memory and
+                        cytotoxic T-cells, which emit chemokines (granzymes and
+                        perforins) to destroy the infected cell.
+                      </li>
+                      <li>
+                        Clonal proliferation and activation of B-cells and
+                        memory B-cells.
+                      </li>
+
+                      <li>
+                        Maturation of B-cells into plasma B-cells (antibody
+                        factories).
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section>
+              <h3>Post-vaccination Immune Response</h3>
+              <p>
+                In this scenario an already vaccinated person is attacked by
+                SARS-CoV-2.
+              </p>
+              <div class="image-info no-border">
+                <div class="image-info-image">
+                  <picture>
+                    <source
+                      srcset="img/immune-responses/1-virus-immune-response.webp"
+                      type="image/webp"
+                    />
+                    <img
+                      src="img/immune-responses/1-virus-immune-response.png"
+                      alt="1"
+                      loading="lazy"
+                    />
+                  </picture>
+                </div>
+                <div class="image-info-info">
+                  <div>
+                    <h4>1</h4>
+
+                    <ol class="counter-list">
+                      <li>
+                        Mature B-cells (plasma cells) produce antibodies which
+                        bind to the S protein of the invading virions rendering
+                        them unable to bind to host cells.
+                      </li>
+                      <li>
+                        Antibody binding also signals to macrophages to attack
+                        the virions.
+                      </li>
+                      <li>
+                        Antibodies block the virion's access to the S protein
+                        receptor (ACE2) denying access to the cell's interior.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+              <div class="image-info image-info-reverse">
+                <div class="image-info-image">
+                  <picture>
+                    <source
+                      srcset="img/immune-responses/2-virus-immune-response.webp"
+                      type="image/webp"
+                    />
+                    <img
+                      src="img/immune-responses/2-virus-immune-response.png"
+                      alt="2"
+                      loading="lazy"
+                    />
+                  </picture>
+                </div>
+                <div class="image-info-info">
+                  <div>
+                    <h4>2</h4>
+                    <p>
+                      Note: the first seven steps are identical to those of the
+                      <a href="#sarscov2pathway">SARS-CoV-2 Pathway</a>, above.
+                    </p>
+                    <p>
+                      If a viral particle manages to evade the antibodies
+                      produced by the plasma cells and is able to enter the host
+                      cell, the following scenario might take place:
+                    </p>
+                    <ol class="counter-list">
+                      <li>
+                        The S protein of SARS-CoV-2 binds to a specific (ACE2)
+                        host cell receptor.
+                      </li>
+                      <li>Fusion and entry take place via endocytosis.</li>
+                      <li>
+                        Breakdown of the containing endosome and viral proteins,
+                        and release of genomic RNA.
+                      </li>
+                      <li>Replication of genomic RNA.</li>
+                      <li>Replication and expression of subgenonomic mRNAs.</li>
+                      <li>
+                        Translation of subgenonomic mRNAs into viral proteins by
+                        ribosomes.
+                      </li>
+                      <li>
+                        Fragments of viral proteins display on host cell MHC1
+                        receptors.
+                      </li>
+                      <li>
+                        A cytotoxic T-cell binds to the fragment of the S
+                        protein presented on the MHC1 receptor. This stimulates
+                        the production of chemokines which destroy the infected
+                        cell.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </section>
           <section>
             <h2>The Role of Adjuvants in Vaccines</h2>
             <p>
