text glitches fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A description of SARS-CoV-2 and Oxford-Astrazeneca / Pfizer/BioNTech vaccine pathways, as well as immune responses, both to the vaccine itself and to post-vaccination viral invasion."
+      content="A description of SARS-CoV-2 and Oxford-Astrazeneca / Pfizer/BioNTech vaccine pathways, as well as of immune responses, both to the vaccine itself and to post-vaccination viral invasion."
     />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -44,8 +44,9 @@
             <p>
               This page outlines the pathways of the SARS-CoV-2 virus and of the
               two most widely used vaccines against Covid-19 (the disease caused
-              by the virus). It also includes immune responses, both to the
-              vaccine itself and to post-vaccination viral invasion.
+              by the virus). It also includes a simplified description of immune
+              responses, both to the vaccine itself and to post-vaccination
+              viral invasion.
             </p>
             <h3>A Note on MHC1 cell receptors and the immune response</h3>
             <ol>
