--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
               induce a strong immune response which will attract the attention
               of cells from the innate immune system. However, the response must
               not be so strong that the cell is destroyed (or self-destructs)
-              before the protein fragment on the MHC1 receptor is stored and
+              before the protein fragment on the MHC1 receptor is identified and
               analysed by the adaptive immune system.
             </p>
           </section>
